2004-09-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/printf.c,
	* device/lib/z80/printf.c: removed define for NULL

2004-09-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/xa51/xa_link.c,
	* device/examples/ds390/ow390/ad26.c,
	* device/examples/ds390/ow390/cnt1d.c,
	* device/examples/ds390/ow390/counter.c,
	* device/examples/ds390/ow390/ds2480.h,
	* device/examples/ds390/ow390/ds2480ut.c,
	* device/examples/ds390/ow390/findtype.c,
	* device/examples/ds390/ow390/gethumd.c,
	* device/examples/ds390/ow390/owllu.c,
	* device/examples/ds390/ow390/ownetu.c,
	* device/examples/ds390/ow390/swt12.c,
	* device/examples/ds390/ow390/swtloop.c,
	* device/examples/ds390/ow390/temp.c,
	* device/examples/ds390/ow390/temp10.c,
	* device/examples/ds390/ow390/thermo21.c,
	* device/examples/ds390/ow390/tinilnk.c,
	* device/examples/ds390/ow390/tstfind.c,
	* device/examples/serialcomm/windows/serial.cpp,
	* device/examples/serialcomm/windows/test_serialcomm.cpp,
	* device/include/reg51.h: fixed line endings for cvs

2004-09-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c (canDefAccResult, canUseAccOperand,
	packRegsForAccUse, packRegisters): new accumulator register
	packing algorithm
	* support/regression/ports/hc08/support.c (_putchar): suppress
	warning of unused variable
	* src/SDCCicode.c: added SWAP entry to codeTable

2004-09-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/sprintf.c: forgot to add this file before previous commit

2004-09-01 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/gen.c (genPackBits): added operand right in function
	parameters, load result directly if p_type is POINTER (that is
	called by genNearPointerSet)
	* (genUnPackBits): added operand left in function parameters,
	* (genNearPointerGet, genNearPointerSet): prevent the loading of
	FSR0 if accessing bitfields,

2004-08-31 Maarten Brock <sourceforge.brock AT dse.nl>
